--- a/prj1.html
+++ b/prj1.html
@@ -40,7 +40,7 @@
               <button type="button" class="decimal function btn btn-secondary" value=".">.</button>
               <button type="button" class="all-clear function btn btn-danger btn-sm" value="all-clear">AC</button>
         
-              <button type="button" class="equal-sign operator btn btn-seccess" value="=">=</button>
+              <button type="button" class="equal-sign operator btn btn-success" value="=">=</button>
         
             </div>
           </div>
